--- a/src/index.html
+++ b/src/index.html
@@ -64,12 +64,14 @@
             width: 100%;
             min-height: 5vh;
             padding-top: 2vh;
-            padding-bottom: 2vh;
+            padding-bottom: 1vh;
             text-align: center;
+            color:rgb(119, 118, 118);
             line-height: 25px;
             font-size: 13px;
             position: relative;
             z-index: 5;
+            background-color: #f8f6f200;
         }
         #features {
             padding-top: 0vh;
@@ -85,6 +87,8 @@
         .lefty {
             width: 33vw;
             margin-left: 5vw;
+            margin-top:500px;
+            margin-bottom:500px;
         }
         .righty {
             width: 33vw;
@@ -100,7 +104,7 @@
         }
         .dark {
             color: #F8F6F2;
-            background-color: rgb(119, 118, 118);
+            background-color: rgba(119, 118, 118, 0.5);
         }
         .step {
             padding-bottom: 0vh;
