--- a/src/index.html
+++ b/src/index.html
@@ -25,26 +25,6 @@
             width:100vw;
             position: fixed;
         }
-        #mapInset {
-            bottom:50px;
-            right:30px;
-            height: 180px;
-            width:250px;
-            max-width:100%;
-            position: fixed;
-            z-index: 1;
-            opacity: 1;
-            transition: opacity 0.5s ease-in-out;
-            pointer-events: none;
-        }
-        #mapInset .mapboxgl-ctrl-bottom-left{
-            display: none;
-        }
-        @media (max-width: 500px) {
-            #mapInset {
-                display: none;
-            }
-        }
         #header {
             margin: auto;
             width: 100%;
@@ -58,8 +38,6 @@
             text-align: center;
             background-color: #F8F6F2;
             color: rgb(119, 118, 118);
-
-
         }
         #footer {
             width: 100%;
@@ -146,7 +124,6 @@
 <body>
 
 <div id="map"></div>
-<div id="mapInset"></div>
 <div id="story"></div>
 
 <script src="./config.js"></script>
@@ -322,8 +299,6 @@ config.chapters.forEach((record, idx) => {
     }
 
     
-
-
     container.setAttribute('id', record.id);
     container.classList.add('step');
     if (idx === 0) {
@@ -377,23 +352,6 @@ var map = new mapboxgl.Map({
     projection: config.projection
 });
 
-// Create a inset map if enabled in config.js
-if (config.inset) {
- var insetMap = new mapboxgl.Map({
-    container: 'mapInset', // container id
-    style: 'mapbox://styles/mapbox/dark-v10', //hosted style id
-    center: config.chapters[0].location.center,
-    // Hardcode above center value if you want insetMap to be static.
-    zoom: 3, // starting zoom
-    hash: false,
-    interactive: false,
-    attributionControl: false,
-    //Future: Once official mapbox-gl-js has globe view enabled,
-    //insetmap can be a globe with the following parameter.
-    //projection: 'globe'
-  });
-}
-
 if (config.showMarkers) {
     var marker = new mapboxgl.Marker({ color: config.markerColor });
     marker.setLngLat(config.chapters[0].location.center).addTo(map);
@@ -401,7 +359,6 @@ if (config.showMarkers) {
 
 // instantiate the scrollama
 var scroller = scrollama();
-
 
 
 function createRoute(origin, destination) {
@@ -417,7 +374,6 @@ function createRoute(origin, destination) {
   return route;
 }
 
-
 function createPoint(origin, icon) {
     const point ={
         type: 'Feature',
@@ -429,8 +385,6 @@ function createPoint(origin, icon) {
     };
     return point
 }
-
-
 
 function animateRoute(route, point, color, icon) {
   let counter = 0;
@@ -471,36 +425,8 @@ function animateRoute(route, point, color, icon) {
 
 
 
-
-
 map.on("load", function() {
 
-    if (config.use3dTerrain) {
-        map.addSource('mapbox-dem', {
-            'type': 'raster-dem',
-            'url': 'mapbox://mapbox.mapbox-terrain-dem-v1',
-            'tileSize': 512,
-            'maxzoom': 14
-        });
-        // add the DEM source as a terrain layer with exaggerated height
-        map.setTerrain({ 'source': 'mapbox-dem', 'exaggeration': 1.5 });
-
-        // add a sky layer that will show when the map is highly pitched
-        map.addLayer({
-            'id': 'sky',
-            'type': 'sky',
-            'paint': {
-                'sky-type': 'atmosphere',
-                'sky-atmosphere-sun': [0.0, 0.0],
-                'sky-atmosphere-sun-intensity': 15
-            }
-        });
-    };
-
-    // As the map moves, grab and update bounds in inset map.
-    if (config.inset) {
-    map.on('move', getInsetBounds);
-    }
     // setup the instance, pass callback functions
     scroller
     .setup({
@@ -508,68 +434,68 @@ map.on("load", function() {
         offset: 0.5,
         progress: true
     })
+
     .onStepEnter(async response => {
         var current_chapter = config.chapters.findIndex(chap => chap.id === response.element.id);
         var chapter = config.chapters[current_chapter];
 
-        // for route in routes: 
-        // const route = createRoute(chapter.route.origin, chapter.route.destination);
-        // const point = createPoint(chapter.route.origin, chapter.route.icon);
+        if (chapter.id !== "chapter-1" && chapter.id !== "chapter-2" && chapter.id !== "chapter-3") {
+            for (const way of chapter.routes) {
 
-        if (chapter.id !== "chapter-1" && chapter.id !== "chapter-2") {
-            const route = createRoute(chapter.origin, chapter.destination);
-            const point = createPoint(chapter.origin, chapter.icon);
+                const route = createRoute(way.origin, way.destination);
+                const point = createPoint(way.origin, way.icon);
 
-            if (route && point) {
-                // Add or update source and layer for route
-                if (!map.getSource('route-source')) {
-                    map.addSource('route-source', {
-                        type: 'geojson',
-                        data: route,
-                    });
-                    map.addLayer({
-                        id: 'route-layer',
-                        type: 'line',
-                        source: 'route-source',
+                if (route && point) {
+                    // Add or update source and layer for route
+                    if (!map.getSource('route-source')) {
+                        map.addSource('route-source', {
+                            type: 'geojson',
+                            data: route,
+                        });
+                        map.addLayer({
+                            id: 'route-layer',
+                            type: 'line',
+                            source: 'route-source',
+                            paint: {
+                                'line-color': way.color,
+                                'line-width': 2,
+                            },
+                        });
+                    } else {
+                        map.getSource('route-source').setData(route);
+                    }
+
+                    // Add or update source and layer for point
+                    if (!map.getSource('point-source')) {
+                        map.addSource('point-source', {
+                            type: 'geojson',
+                            data: point,
+                        });
+                        map.addLayer({
+                        id: 'point-layer',
+                        type: 'symbol',
+                        source: 'point-source',
+                        layout: {
+                            'icon-image': way.icon,
+                            'icon-size': 1.5,
+                            // 'icon-rotate': ['get', 'bearing'],
+                            // 'icon-rotation-alignment': 'map',
+                            'icon-allow-overlap': true,
+                            'icon-ignore-placement': true,
+                        },
                         paint: {
-                            'line-color': '#007cbf',
-                            'line-width': 2,
+                            'icon-color': way.color, // Set the color here
                         },
                     });
                 } else {
-                    map.getSource('route-source').setData(route);
+                    map.getSource('point-source').setData(point);
                 }
 
-                // Add or update source and layer for point
-                if (!map.getSource('point-source')) {
-                    map.addSource('point-source', {
-                        type: 'geojson',
-                        data: point,
-                    });
-                    map.addLayer({
-                    id: 'point-layer',
-                    type: 'symbol',
-                    source: 'point-source',
-                    layout: {
-                        'icon-image': "marwan_icon-02",
-                        'icon-size': 1.5,
-                        // 'icon-rotate': ['get', 'bearing'],
-                        // 'icon-rotation-alignment': 'map',
-                        'icon-allow-overlap': true,
-                        'icon-ignore-placement': true,
-                    },
-                });
-            } else {
-                map.getSource('point-source').setData(point);
+                // Update paint properties for the route layer
+                // map.setPaintProperty('route-layer', 'line-color', way.color);
+
+                animateRoute(map.getSource('route-source')._data, map.getSource('point-source')._data, way.color, way.icon);
             }
-
-            // Update paint properties for the route layer
-            map.setPaintProperty('route-layer', 'line-color', chapter.color);
-
-            // Update icon properties for the point layer
-            // map.setLayoutProperty('point-layer', 'icon-image', chapter.icon);
-
-            animateRoute(map.getSource('route-source')._data, map.getSource('point-source')._data, chapter.color, chapter.icon);
         }
     }
         
@@ -582,33 +508,11 @@ map.on("load", function() {
         // bbox as main map move: comment out the below if section.
 
 
-
-        if (config.inset) {
-          if (chapter.location.zoom < 5) {
-            insetMap.flyTo({center: chapter.location.center, zoom: 0});
-          }
-          else {
-            insetMap.flyTo({center: chapter.location.center, zoom: 3});
-          }
-        }
-        if (config.showMarkers) {
-            marker.setLngLat(chapter.location.center);
-        }
         if (chapter.onChapterEnter.length > 0) {
             chapter.onChapterEnter.forEach(setLayerOpacity);
         }
         if (chapter.callback) {
             window[chapter.callback]();
-        }
-        if (chapter.rotateAnimation) {
-            map.once('moveend', () => {
-                const rotateNumber = map.getBearing();
-                map.rotateTo(rotateNumber + 180, {
-                    duration: 30000, easing: function (t) {
-                        return t;
-                    }
-                });
-            });
         }
         if (config.auto) {
              var next_chapter = (current_chapter + 1) % config.chapters.length;
@@ -630,89 +534,6 @@ map.on("load", function() {
         document.querySelectorAll('[data-scrollama-index="0"]')[0].scrollIntoView();
     }
 });
-
-//Helper functions for insetmap
-function getInsetBounds() {
-            let bounds = map.getBounds();
-
-            let boundsJson = {
-                "type": "FeatureCollection",
-                "features": [{
-                    "type": "Feature",
-                    "properties": {},
-                    "geometry": {
-                        "type": "Polygon",
-                        "coordinates": [
-                            [
-                                [
-                                    bounds._sw.lng,
-                                    bounds._sw.lat
-                                ],
-                                [
-                                    bounds._ne.lng,
-                                    bounds._sw.lat
-                                ],
-                                [
-                                    bounds._ne.lng,
-                                    bounds._ne.lat
-                                ],
-                                [
-                                    bounds._sw.lng,
-                                    bounds._ne.lat
-                                ],
-                                [
-                                    bounds._sw.lng,
-                                    bounds._sw.lat
-                                ]
-                            ]
-                        ]
-                    }
-                }]
-            }
-
-            if (initLoad) {
-                addInsetLayer(boundsJson);
-                initLoad = false;
-            } else {
-                updateInsetLayer(boundsJson);
-            }
-
-        }
-
-function addInsetLayer(bounds) {
-    insetMap.addSource('boundsSource', {
-        'type': 'geojson',
-        'data': bounds
-    });
-
-    insetMap.addLayer({
-        'id': 'boundsLayer',
-        'type': 'fill',
-        'source': 'boundsSource', // reference the data source
-        'layout': {},
-        'paint': {
-            'fill-color': '#fff', // blue color fill
-            'fill-opacity': 0.2
-        }
-    });
-    // // Add a black outline around the polygon.
-    insetMap.addLayer({
-        'id': 'outlineLayer',
-        'type': 'line',
-        'source': 'boundsSource',
-        'layout': {},
-        'paint': {
-            'line-color': '#000',
-            'line-width': 1
-        }
-    });
-}
-
-function updateInsetLayer(bounds) {
-    insetMap.getSource('boundsSource').setData(bounds);
-}
-
-
 
 // setup resize event
 window.addEventListener('resize', scroller.resize);
